# Copyright (c) <2009> <Newton Game Dynamics>
# 
# This software is provided 'as-is', without any express or implied
# warranty. In no event will the authors be held liable for any damages
# arising from the use of this software.
# 
# Permission is granted to anyone to use this software for any purpose,
# including commercial applications, and to alter it and redistribute it
# freely



add_subdirectory (common)
add_subdirectory (demo01_theBasics)
add_subdirectory (demo02_collisionShapes)
add_subdirectory (demo03_physicsMaterials)
add_subdirectory (demo04_basicJoints)
add_subdirectory (demo05_advancedJoints)


